<resources>
    <string name="app_name">TapMeNow</string>
    <string name="Login_txt">Login</string>
    <string name="Signup_txt">Signup</string>
    <string name="Submit_txt">SUBMIT</string>
    <string name="Edittxt_hint_Email">Email</string>
    <string name="Edittxt_hint_Password">Password</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Login_btn">LOGIN</string>
    <string name="Edittxt_hint_firstname">First Name</string>
    <string name="Edittxt_hint_lastname">Last Name</string>
    <string name="Edittxt_hint_phone">Phone Number</string>
    <string name="ForgotPassword_txt">Forgot Password?</string>
    <string name="add_title">Add Title</string>

    <string name="ForgotPassword_message">Enter Your registered email address below. We"'"ll send you a RESET link via
        Email.
    </string>
    <string name="LogInWithFb">Facebook</string>
    <string name="LogInWithGoogle">Google</string>
    <string name="facebook_app_id">1053673598174539</string>
    <string name="fb_login_protocol_scheme">fb1053673598174539</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@user.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="monday_letter">M</string>
    <string name="tuesday_letter">T</string>
    <string name="wednesday_letter">W</string>
    <string name="thursday_letter">T</string>
    <string name="friday_letter">F</string>
    <string name="saturday_letter">S</string>
    <string name="sunday_letter">S</string>


</resources>
