<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dialoglayoutbackground">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginHorizontal="@dimen/_12sdp"
                  android:layout_marginVertical="@dimen/_8sdp"
                  android:orientation="vertical"
    >

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/_10sdp"
        >

            <RelativeLayout android:id="@+id/cancelbtn" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:padding="@dimen/_5sdp"
                            android:background="@drawable/roundbackgroundlayout">
                <ImageView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:src="@drawable/cancel"/>
            </RelativeLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/ForgotPassword_txt"
                      android:textColor="@color/black"
                      android:textSize="@dimen/_15sdp"
                      android:layout_below="@+id/cancelbtn"
                      android:textStyle="bold"

            />
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/_10sdp"
        >
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/ForgotPassword_message"
                      android:textColor="@color/blue"
                      android:layout_centerVertical="true"
            />
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"

                        android:paddingVertical="@dimen/_10sdp">
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_input_layout_registration"
                    android:focusableInTouchMode="true"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel">

                <EditText
                        android:id="@+id/editText_phone_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Edittxt_hint_Email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColorHint="@color/EditText_hit_color"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp">

            <TextView android:id="@+id/submitButton" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerVertical="true"
                      android:textStyle="bold"
                      android:text="@string/Submit_txt" android:layout_alignParentRight="true"
                      android:textColor="@color/LoginButton_txt_color" android:textAllCaps="true"
                      android:paddingHorizontal="@dimen/_12sdp" android:paddingVertical="@dimen/_8sdp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
